--- a/ColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="chS-yw-gz0">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,121 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="ColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qyn-us-K5y">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="qyn-us-K5y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2sL-Gt-szN"/>
+                            <constraint firstItem="qyn-us-K5y" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="781-lg-6Yh"/>
+                            <constraint firstItem="qyn-us-K5y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="DBK-zr-A7S"/>
+                            <constraint firstItem="qyn-us-K5y" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="fDT-ZE-05z"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="lcn-13-fFX">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="cBW-w4-3zY">
+                            <connections>
+                                <segue destination="izW-FS-7fA" kind="show" id="JPH-lq-NDB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="qyn-us-K5y" id="fiB-iO-O1m"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1037.5999999999999" y="-564.46776611694156"/>
+        </scene>
+        <!--Juegos View Controller-->
+        <scene sceneID="liR-Di-D7N">
+            <objects>
+                <viewController id="izW-FS-7fA" customClass="JuegosViewController" customModule="ColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hyd-Az-WJy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lyJ-FL-6TF">
+                                <rect key="frame" x="47.5" y="96" width="280" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="HCi-jn-rqJ"/>
+                                    <constraint firstAttribute="width" constant="280" id="xDJ-AC-aks"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingrese titulo" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H2s-YX-z0j">
+                                <rect key="frame" x="47.5" y="254" width="280" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81H-zR-rBL">
+                                <rect key="frame" x="160" y="304" width="55" height="30"/>
+                                <state key="normal" title="Agregar"/>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="izW-FS-7fA" eventType="touchUpInside" id="TPc-JK-TFe"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="81H-zR-rBL" firstAttribute="top" secondItem="H2s-YX-z0j" secondAttribute="bottom" constant="20" id="6eb-FJ-m62"/>
+                            <constraint firstItem="81H-zR-rBL" firstAttribute="centerX" secondItem="hyd-Az-WJy" secondAttribute="centerX" id="Ewe-e0-wkf"/>
+                            <constraint firstItem="lyJ-FL-6TF" firstAttribute="width" secondItem="H2s-YX-z0j" secondAttribute="width" id="Ooc-e7-6J9"/>
+                            <constraint firstItem="lyJ-FL-6TF" firstAttribute="centerX" secondItem="hyd-Az-WJy" secondAttribute="centerX" id="eKt-0c-1um"/>
+                            <constraint firstItem="H2s-YX-z0j" firstAttribute="centerX" secondItem="hyd-Az-WJy" secondAttribute="centerX" id="gdR-Tc-Ayj"/>
+                            <constraint firstItem="lyJ-FL-6TF" firstAttribute="top" secondItem="6Z7-o6-Qz3" secondAttribute="top" constant="32" id="tQc-wv-P1w"/>
+                            <constraint firstItem="H2s-YX-z0j" firstAttribute="top" secondItem="lyJ-FL-6TF" secondAttribute="bottom" constant="8" symbolic="YES" id="tbq-8F-sTY"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Z7-o6-Qz3"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="iGD-al-vDP">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="49x-xa-g6m">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="izW-FS-7fA" id="6Ln-jE-msL"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Fotos" id="V3M-xX-FGb">
+                                <connections>
+                                    <action selector="fotosTapped:" destination="izW-FS-7fA" id="FcC-ax-Wz0"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="JuegoImageView" destination="lyJ-FL-6TF" id="a2K-X2-6DB"/>
+                        <outlet property="tituloTextField" destination="H2s-YX-z0j" id="SST-e9-PKV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c6z-8e-lj4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1919.2" y="-561.76911544227892"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CCh-mh-kHX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="chS-yw-gz0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cD9-9K-8CM">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ASP-Hk-Pjf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bzk-DW-3ie" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="128.80000000000001" y="-564.46776611694156"/>
         </scene>
     </scenes>
 </document>
